### April XX 2022, Release version 0.11.1 ###

  * FIXED:
    * the sunlive time was wrongly computed, it has been fixed.

  * MODIFIED:
    * set_size function has been improved.


### April 1 2022, Release version 0.11.0 ###

  * ADDED:
    * a new numpad has been introduced.
    * a new keyboard has been introduced.
    * a new widget has been introduced.
    * a json file dedicated to sensors has been added.
    * a window and a dictionary to manage mqtt based sensors have been added.
    * a window and a dictionary to manage 1wire based sensors have been added.
    * a window and a dictionary to manage bme280 based sensors have been added.
    * specific threads have been added for testing purpose.
    * options to control data feed for time series and the computation of MSL pressure have been introduced.
    * ephemeris section has been introduced.
    * few new logging messages have been added.
    * a storage value has been added for all MQTT sensors.
    * a checkbox to activate/deactivate a sensor has been added.
    * database options have been added.
    * new weather icons have been designed.

  * MODIFIED:
    * mqtt thread has been modified to handle new mqtt based sensors.
    * ds18b20 and bme280 threads has been modified to handle current 1wire based sensors and bme280 sensors.
    * tables are now automatically handled by the weather station.
    * cleaning thread has been modified to handle new tables.
    * option window can handle options to control MSL pressure and sensors for display and time series.
    * thread to display data can handle different tables based on options.
    * GUI is now handling different sensors for in and out.
    * time series section can now handle different sensors for in and out temperature, pressure and humidity.
    * menu icons have been improved.
    * cleaning thread only cleans test tables if platform is Windows.
    * a new close window has been designed.